<resources>
    <string name="app_name">TheMovieDB</string>

    <string name="error">Retry</string>
    <string name="movie_poster">Movie poster</string>
    <string name="label_overview">Overview</string>
    <string name="release_date">Release date</string>
    <string name="label_votes">%s votes</string>
    <string name="trailers">Trailers</string>
    <string name="user_reviews">User Reviews</string>
    <string name="language">Language</string>
</resources>