<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_navy"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.gemslight.api_service.Constants" />

        <variable
            name="genre"
            type="String" />

        <variable
            name="data"
            type="com.gemslight.common.entity.movie.movie_detail.MovieDetailResponse" />
    </data>

    <ScrollView
        android:id="@+id/sv_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="top|left|bottom|start|end|right">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/loadingContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/page_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_backdrop"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="16dp"
                    app:layout_constraintDimensionRatio="w,3:3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/movie_poster"
                        android:scaleType="centerCrop"
                        app:loadImage="@{Constants.IMAGE_PREFIX + data.backdropPath}" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:outlineAmbientShadowColor="@color/violet1"
                    android:text="@{data.title}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cv_backdrop"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{genre}"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_title" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/violet1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_backdrop" />

                <TextView
                    android:id="@+id/label_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/release_date"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/label_language"
                    app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

                <TextView
                    android:id="@+id/text_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_timer_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{data.releaseDate}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/label_release_date"
                    app:layout_constraintStart_toStartOf="@+id/label_release_date"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider"
                    tools:text="@tools:sample/date/mmddyy" />

                <TextView
                    android:id="@+id/label_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{@string/label_votes(data.voteCount)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/label_language"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote" />

                <TextView
                    android:id="@+id/tv_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_rating_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(data.voteAverage)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/label_vote"
                    app:layout_constraintStart_toStartOf="@+id/label_vote"
                    app:layout_constraintTop_toTopOf="@+id/text_release_date"
                    tools:text="8/10" />

                <TextView
                    android:id="@+id/label_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/language"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/label_release_date"
                    app:layout_constraintStart_toEndOf="@+id/label_vote"
                    app:layout_constraintTop_toBottomOf="@+id/tv_language" />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_public_language_24dp"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@{data.originalLanguage}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/label_language"
                    app:layout_constraintStart_toStartOf="@+id/label_language"
                    app:layout_constraintTop_toTopOf="@+id/tv_vote" />

                <View
                    android:id="@+id/view_divider_bottom"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/violet1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_vote" />

                <TextView
                    android:id="@+id/label_overview"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_overview"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider_bottom" />

                <TextView
                    android:id="@+id/text_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:justificationMode="inter_word"
                    android:text="@{data.overview}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_overview"
                    tools:text="overview" />

                <TextView
                    android:id="@+id/label_trailers"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/trailers"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_overview" />

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/video_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_trailers" />

                <TextView
                    android:id="@+id/label_reviews"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/user_reviews"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/video_trailer" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/label_reviews" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>